# InterfTheorControl

./: __main__.py  pyproject.toml
Config/: cfg.py
Ui/: ui.py
workLogic/: logic.py  logic_in.py
